--- a/español.html
+++ b/español.html
@@ -31,67 +31,20 @@
 <section class="contenido wrapper">
     <div class="contenedor">
 
-<table class="contenido-imagen">
-<tr>
-<td><img src="imagenes/virus.png" height="100px" width="100px"> </a></td>
-<td><b>
-<span style="color:blueviolet">Anti-virus:</span> Los antivirus son programas cuyo objetivo es detectar o eliminar virus informáticos. Con el transcurso del tiempo, la aparición de sistemas operativos más avanzados e internet, los antivirus han evolucionado hacia programas más avanzados que además de buscar y detectar virus informáticos consiguen bloquearlos, desinfectar archivos y prevenir una infección de los mismos. 
-<br><br>Actualmente son capaces de reconocer otros tipos de malware como spyware, gusanos, troyanos, rootkits, y el virus zombie etc.
-</b></td> 
-</tr>
-</table>
 
-<table class="contenido-imagen">
-<tr>
-<td><img src="imagenes/archivo.jpg" height="100px" width="100px"> </a></td>
-<td><b>
-<span style="color:blueviolet">Archivos:</span> Un archivo o fichero informático es un conjunto de bits que son almacenados en un dispositivo. Un archivo es identificado por un nombre y la descripción de la carpeta o directorio que lo contiene. <br><br>A los archivos informáticos se les llama así porque son los equivalentes digitales de los archivos escritos en expedientes, tarjetas, libretas, papel o microfichas del entorno de oficina tradicional.
-</b></td> 
-</tr>
-</table>
 
-<table class="contenido-imagen">
-<tr>
-<td><img src="imagenes/actualizacion.jpg" height="100px" width="100px"> </a></td>
-<td><b>
-<span style="color:blueviolet">Actualizacion:</span> Las actualizaciones son añadidos o modificaciones realizadas sobre los sistemas operativos o aplicaciones que tenemos instalados en nuestros dispositivos y cuya misión es mejorar tanto aspectos de funcionalidad como de seguridad.
-</b></td> 
-</tr>
-</table>
 
-<table class="contenido-imagen">
-<tr>
-<td><img src="imagenes/adaptador.jpg" height="100px" width="100px"> </a></td>
-<td><b>
-<span style="color:blueviolet">Adaptador:</span> En informática, un adaptador es un dispositivo en el que se adapta un hardware o un componente de software, que convierte datos transmitidos en un formato a otro.<br><br>El formato de datos puede ser, por ejemplo, un mensaje enviado entre objetos en una aplicación, o un paquete enviado a través de una red de comunicaciones.
-</b></td> 
-</tr>
-</table>
 
-<table class="contenido-imagen">
-<tr>
-<td><img src="imagenes/almacenamiento.jpg" height="100px" width="100px"> </a></td>
-<td><b>
-<span style="color:blueviolet">Almacenamiento:</span> Es un conjunto de componentes utilizados para leer o grabar datos en el soporte de almacenamiento de datos, en forma temporal o permanente. 
-</b></td> 
-</tr>
-</table>
 
-<table class="contenido-imagen">
-<tr>
-<td><img src="imagenes/app.jpg" height="100px" width="100px"> </a></td>
-<td><b>
-<span style="color:blueviolet">Aplicaciones:</span> En informática, una aplicación es un programa informático diseñado como herramienta para permitir a un usuario realizar uno o diversos tipos de tareas.<br><br> Esto lo diferencia principalmente de otros tipos de programas, como los sistemas operativos (que hacen funcionar la computadora), las utilidades (que realizan tareas de mantenimiento o de uso general), y las herramientas de desarrollo de software (para crear programas informáticos). Las aplicaciones pertenecen al software de aplicación.
-</b></td> 
-</tr>
-</table>
+
+
 
 
         <table class="contenido-imagen">
             <tr>
-                <td><img src="imagenes/activex.jpg" height="100px" width="100px"> </a> 
+                <td><img src="" height="100px" width="100px"> </a> 
                 </td>
-                <td> <b> <span style="color:blueviolet">Active X: </span> la tecnología de la compañía creada por Microsoft que proporciona un entorno de programación para permitir la interacción y la personalización de los sitios web.</b> 
+                <td> <b> <span style="color:blueviolet">: </span> </b> 
                 </td>
             </tr>
         </table>
